<resources>
    <string name="app_name">ValeAPP</string>
    <string name="bot_n_que_permite_volver_a_la_pantalla_para_introducir_el_nombre_de_usuario">Botón que permite volver a la pantalla para introducir el nombre de usuario</string>
    <string name="vuelve_a_intentarlo">VUELVE A INTENTARLO</string>
    <string name="imagen_de_un_cuadrado">Imagen de un cuadrado</string>
    <string name="imagen_de_tri_ngulo">Imagen de triángulo</string>
    <string name="imagen_de_una_estrella">Imagen de una estrella</string>
    <string name="imagen_de_un_c_rculo">Imagen de un círculo</string>
    <string name="elige_tu_imagen">ELIGE TU IMAGEN</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="imagen_del_paso_2_no_marcada">Imagen del Paso 2 no marcada</string>
    <string name="imagen_del_paso_1_marcada_paso_actual">Imagen del Paso 1 marcada. Paso actual</string>
    <string name="imagen_del_paso_3_no_marcada">Imagen del Paso 3 no marcada</string>
    <string name="imagen_del_paso_4_no_marcada">Imagen del Paso 4 no marcada</string>
    <string name="imagen_del_paso_5_no_marcada">Imagen del Paso 5 no marcada</string>
    <string name="nombre_de_la_aplicaci_n_vale_app">Nombre de la aplicación: Vale APP</string>
    <string name="valeapp">ValeAPP</string>
    <string name="escribe_aqu_tu_nombre_de_usuario">ESCRIBE AQUÍ TU NOMBRE DE USUARIO</string>
    <string name="nombre_de_usuario">NOMBRE DE USUARIO</string>
    <string name="bot_n_para_comprobar_el_nombre_de_usuario">Botón para comprobar el nombre de usuario</string>
    <string name="escribe_tu_nombre_de_usuario">ESCRIBE TU NOMBRE DE USUARIO</string>
    <string name="espera_un_momento">ESPERA UN MOMENTO</string>
    <string name="error_en_el_nombre_de_usuario">Error en el nombre de usuario</string>
    <string name="c_rculo_seleccionado">Círculo seleccionado</string>
    <string name="estrella_seleccionada">Estrella seleccionada</string>
    <string name="cuadrado_seleccionado">Cuadrado seleccionado</string>
    <string name="tri_ngulo_seleccionado">Triángulo seleccionado</string>
    <string name="boton_c_rculo_seleccionado">Círculo seleccionado</string>
    <string name="boton_estrella_seleccionada">Estrella seleccionada</string>
    <string name="boton_cuadrado_seleccionado">Cuadrado seleccionado</string>
    <string name="boton_tri_ngulo_seleccionado">Triángulo seleccionado</string>
    <string name="imagen_del_paso_1_marcada">imagen del paso 1 marcada</string>
    <string name="imagen_del_paso_2_marcada_paso_actual">imagen del paso 2 marcada paso actual</string>
    <string name="texto_de_bot_n_siguiente_paso">Texto de botón: Siguiente Paso</string>
    <string name="imagen_de_una_naranja">Imagen de una naranja</string>
    <string name="imagen_de_una_manzana">imagen de una manzana</string>
    <string name="fresa_seleccionada">Fresa seleccionada</string>
    <string name="imagen_de_una_fresa">imagen de una fresa</string>
    <string name="texto_de_bot_n_paso_anterior">Texto de botón: Paso Anterior</string>
    <string name="bot_n_para_ir_al_paso_anterior">Botón para ir al paso anterior</string>
    <string name="anterior">ANTERIOR</string>
    <string name="imagen_de_un_platano">imagen de un plátano</string>
    <string name="platano_seleccionado">Plátano seleccionado</string>
    <string name="naranja_seleccionada">Naranja seleccionada</string>
    <string name="manzana_seleccionada">Manzana seleccionada</string>
    <string name="imagen_de_un_gato">Imagen de un gato</string>
    <string name="imagen_de_un_perro">Imagen de un perro</string>
    <string name="imagen_de_un_caballo">Imagen de un caballo</string>
    <string name="imagen_de_un_pajaro">Imagen de un pajaro</string>
    <string name="perro_seleccionado">Perro seleccionado</string>
    <string name="gato_seleccionado">Gato seleccionado</string>
    <string name="caballo_seleccionado">Caballo seleccionado</string>
    <string name="pajaro_seleccionado">Pajaro seleccionado</string>
    <string name="imagen_del_paso_3_marcada_paso_actual">Imagen del paso 3 marcada paso actual</string>
    <string name="imagen_del_paso_2_marcada">imagen del paso 2 marcada</string>
    <string name="imagen_del_paso_3_marcada">imagen del paso 3 marcada</string>
    <string name="imagen_del_paso_4_marcada_paso_actual">imagen del paso 4 marcada paso actual</string>
    <string name="imagen_de_un_coche">Imagen de un coche</string>
    <string name="imagen_de_una_moto">Imagen de una moto</string>
    <string name="imagen_de_una_bicicleta">Imagen de una bicicleta</string>
    <string name="imagen_de_un_helicoptero">Imagen de un helicóptero</string>
    <string name="coche_seleccionado">Coche seleccionado</string>
    <string name="moto_seleccionada">Moto seleccionada</string>
    <string name="bicicleta_seleccionada">Bicicleta seleccionada</string>
    <string name="helicoptero_seleccionado">helicóptero seleccionado</string>
    <string name="bot_n_para_ir_al_siguiente_paso">Botón para ir al siguiente paso</string>
    <string name="texto_del_bot_n_para_ir_al_siguiente_paso">Texto de botón: siguiente paso</string>
    <string name="imagen_del_paso_4_marcada">Imagen del paso 4 marcada</string>
    <string name="imagen_del_paso_5_marcada_paso_actual">imagen del paso 5 marcada paso actual</string>
    <string name="texto_de_bot_n_para_comprobar_la_contrase_a">Texto de botón para comprobar la contraseña</string>
    <string name="imagen_de_una_pelota">Imagen de una pelota</string>
    <string name="imagen_de_un_yoy">Imagen de un yoyó</string>
    <string name="imagen_de_un_mu_eco">Imagen de un muñeco</string>
    <string name="imagen_de_unos_bloques">Imagen de unos bloques</string>
    <string name="pelota_seleccionada">pelota seleccionada</string>
    <string name="yoy_seleccionado">Yoyó seleccionado</string>
    <string name="mu_eco_seleccionado">Muñeco seleccionado</string>
    <string name="bloques_seleccionados">Bloques seleccionados</string>
    <string name="bot_n_para_comprobar_la_contrase_a">Botón para comprobar la contraseña</string>
    <string name="error_en_la_contrase_a">Error en la contraseña</string>
    <string name="imagen_de_error_en_la_contrase_a">Imagen de error en la contraseña</string>
    <string name="bien_hecho_entrando_a_tu_cuenta">¡BIEN HECHO! Entrando a tu cuenta</string>
    <string name="bot_n_que_permite_ir_a_la_pantalla_para_introducir_la_contrase_a">Botón que permite ir a la pantalla para introducir la contraseña</string>
    <string name="imagen_de_exito_en_la_contrase_a">Imagen de exito en la contraseña</string>
    <string name="elige_tu_imagen_paso_1">ELIGE TU IMAGEN PASO 1</string>
    <string name="elige_tu_imagen_paso_2">ELIGE TU IMAGEN PASO 2</string>
    <string name="elige_tu_imagen_paso_3">ELIGE TU IMAGEN PASO 3</string>
    <string name="elige_tu_imagen_paso_4">ELIGE TU IMAGEN PASO 4</string>
    <string name="elige_tu_imagen_paso_5">ELIGE TU IMAGEN PASO 5</string>
    <string name="men_principal">MENÚ PRINCIPAL</string>
    <string name="bot_n_para_acceder_a_mis_tareas">Botón para acceder a mis tareas</string>
    <string name="bot_n_para_ir_al_men_de_mis_tareas">Botón para ir al menú de MIS TAREAS</string>
    <string name="mis_tareas">MIS TAREAS</string>
    <string name="bot_n_para_ir_al_men_de_mis_preferencias">Botón para ir al menú de MIS PREFERENCIAS</string>
    <string name="mis_preferencias">MIS PREFERENCIAS</string>
    <string name="bot_n_para_ir_al_men_de_mis_profes">Botón para ir al menú de MIS FACILITADORES</string>
    <string name="mis_profes">MIS FACILITADORES</string>
    <string name="imagen_asociada_al_bot_n_mis_tareas">Imagen asociada al botón MIS TAREAS</string>
    <string name="imagen_asociada_al_bot_n_mis_profes">Imagen asociada al botón MIS FACILITADORES</string>
    <string name="imagen_asociada_al_bot_n_mis_preferencias">Imagen asociada al botón MIS PREFERENCIAS</string>
    <string name="elige_tus_opciones_preferidas">ELIGE TUS OPCIONES PREFERIDAS</string>
    <string name="audio">AUDIO</string>
    <string name="v_deo">VÍDEO</string>
    <string name="texto">TEXTO</string>
    <string name="opci_n_de_audio_seleccionada_pulsa_para_quitar_la_selecci_n">Opción de audio seleccionada. Pulsa para quitar la selección</string>
    <string name="opci_n_de_v_deo_seleccionada_pulsa_para_quitar_la_selecci_n">Opción de vídeo seleccionada. Pulsa para quitar la selección</string>
    <string name="opci_n_de_texto_seleccionada_pulsa_para_quitar_la_selecci_n">Opción de texto seleccionada. Pulsa para quitar la selección</string>
    <string name="opci_n_de_audio_no_seleccionada_pulsa_para_seleccionar">Opción de audio no seleccionada. Pulsa para seleccionar</string>
    <string name="opci_n_de_v_deo_no_seleccionada_pulsa_para_seleccionar">Opción de vídeo no seleccionada. Pulsa para seleccionar</string>
    <string name="opci_n_de_texto_no_seleccionada_pulsa_para_seleccionar">Opción de texto no seleccionada. Pulsa para seleccionar</string>
    <string name="texto_seleccionado">Texto seleccionado</string>
    <string name="v_deo_seleccionado">Vídeo seleccionado</string>
    <string name="audio_seleccionado">Audio seleccionado</string>
    <string name="salir_de_la_aplicaci_n">Salir de la aplicación</string>
    <string name="bot_n_para_salir_de_la_aplicaci_n">Botón para salir de la aplicación</string>
    <string name="hasta_luego_saliendo_de_tu_cuenta">¡HASTA LUEGO! Saliendo de tu cuenta</string>
    <string name="volver_al_men_principal">MENÚ PRINCIPAL</string>
    <string name="bot_n_para_volver_al_men_principal">Botón para volver al menú principal</string>
    <string name="mis_facilitadores">MIS FACILITADORES</string>
    <string name="bot_n_para_ir_al_men_de_mis_facilitadores">Botón para ir al menú de mis facilitadores</string>
    <string name="mis_tareas2">mis tareas</string>
    <string name="mis_tareas3">MIS TAREAS</string>
    <string name="mis_facilitadores_menu">MIS FACILITADORES</string>
    <string name="mis_facilitadores_menu_texto">Mis facilitadores</string>
    <string name="ir_a_chat">Botón para ir al chat de la tarea</string>
    <string name="bot_n_respoder_a_la_tarea">Botón responder a la tarea</string>
    <string name="responder">RESPONDER</string>
    <string name="enviar">ENVIAR</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="textview">TextView</string>
    <string name="descripci_n">Descripción</string>
    <string name="descripci_n2">DESCRIPCIÓN</string>
    <string name="enviar_respuesta">Enviar respuesta</string>
    <string name="enviar_mensaje">Enviar mensaje</string>
    <string name="bot_n_para_reproducir_v_deo">Botón para reproducir vídeo</string>
</resources>