<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesionPass4">

    <TextView
        android:id="@+id/eligeImagen"
        android:layout_width="396dp"
        android:layout_height="60dp"
        android:contentDescription="@string/elige_tu_imagen_paso_4"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/elige_tu_imagen_paso_4"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="488dp"
            android:contentDescription="@string/imagen_del_paso_1_marcada"
            app:srcCompat="@drawable/circulo_relleno" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/imagen_del_paso_2_marcada"
            app:srcCompat="@drawable/circulo_relleno" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="80dp"
            android:contentDescription="@string/imagen_del_paso_3_marcada"
            app:srcCompat="@drawable/circulo_relleno" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="108dp"
            android:contentDescription="@string/imagen_del_paso_4_marcada_paso_actual"
            app:srcCompat="@drawable/circulo_relleno" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/imagen_del_paso_5_no_marcada"
            app:srcCompat="@drawable/circulo_no_relleno" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="328dp"
        android:layout_height="84dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="164dp"
            android:layout_height="84dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/irPass3"
                android:layout_width="63dp"
                android:layout_height="49dp"
                android:background="#000000"
                android:contentDescription="@string/bot_n_para_ir_al_paso_anterior"
                android:rotation="0"
                android:scaleType="fitCenter"
                android:scaleX="1"
                app:srcCompat="@drawable/abc_vector_test" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/texto_de_bot_n_paso_anterior"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/anterior"
                android:textColor="#000"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="165dp"
            android:layout_height="84dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/irPass5"
                android:layout_width="63dp"
                android:layout_height="49dp"
                android:background="#000000"
                android:contentDescription="@string/bot_n_para_ir_al_siguiente_paso"
                android:rotation="180"
                android:scaleType="fitCenter"
                android:scaleX="1"
                app:srcCompat="@drawable/abc_vector_test" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/texto_de_bot_n_siguiente_paso"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/siguiente"
                android:textColor="#000"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="306dp"
        android:layout_height="304dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eligeImagen">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="151dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Coche"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/imagen_de_un_coche"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/coche" />

            <ImageButton
                android:id="@+id/Moto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/imagen_de_una_moto"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/moto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/Bicicleta"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/imagen_de_una_bicicleta"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/bicicleta" />

            <ImageButton
                android:id="@+id/Helicoptero"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/imagen_de_un_helicoptero"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/helicoptero" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cocheSeleccionado"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/coche_seleccionado"
                app:srcCompat="@drawable/tick" />

            <ImageView
                android:id="@+id/motoSeleccionada"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/moto_seleccionada"
                app:srcCompat="@drawable/tick" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bicicletaSeleccionada"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/bicicleta_seleccionada"
                app:srcCompat="@drawable/tick" />

            <ImageView
                android:id="@+id/helicopteroSeleccionado"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/helicoptero_seleccionado"
                app:srcCompat="@drawable/tick" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>