<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:padding="10dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="265dp"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="100dp"
                android:layout_height="41dp"
                android:background="@color/black"
                android:contentDescription="@string/bot_n_para_volver_al_men_principal"
                android:scaleType="centerCrop"
                android:tint="@color/white"
                app:srcCompat="@drawable/abc_vector_test" />

            <TextView
                android:id="@+id/name"
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textoVolverAPrincipal"
            android:layout_width="265dp"
            android:layout_height="64dp"
            android:text="@string/volver_al_men_principal"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/botonLogout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:layout_weight="1.1"
        android:background="@color/black"
        android:contentDescription="@string/bot_n_para_salir_de_la_aplicaci_n"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        app:srcCompat="@drawable/foto_logout" />

</LinearLayout>
