<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ValeAPPMain"
        android:layout_width="375dp"
        android:layout_height="301dp"
        android:contentDescription="@string/nombre_de_la_aplicaci_n_vale_app"
        android:fontFamily="@font/roboto_medium"
        android:textColor="#000"
        android:gravity="center"
        android:text="@string/valeapp"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/errorNombreUsuario"
        android:layout_width="375dp"
        android:layout_height="301dp"
        android:contentDescription="@string/espera_un_momento"
        android:fontFamily="@font/roboto_medium"
        android:textColor="#000"
        android:gravity="center"
        android:text="@string/espera_un_momento"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

</androidx.constraintlayout.widget.ConstraintLayout>